--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </div>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/DenizDurna" target="_blank">Deniz Durna</a>.
   </footer>
 </body>
 
